--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             
             <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
                 <a class="my-0 mr-md-auto font-weight-normal" href="./index.html">
-                    <!-- NIKLAS: HIER KOMMT DAS LOGO REIN -->
-                    <img src="BILDTITEL.ENDUNG" alt="Logo">
+                    <!-- NIKLAS: HIER KOMMT DAS LOGO REIN
+                    SCHÖN ODER!? -->
+                    <img src="logo.jpg" alt="Logo">
                 </a>
                 <nav class="my-2 my-md-0 mr-md-3">
                     <a class="p-2 text-dark" href="./index.html">Benutzeransicht</a>
@@ -31,8 +32,9 @@
             </div>
 
             <footer class="footer">
-                <!-- NIKLAS: HIER KOMMT DEINE FUSSZEILE REIN -->
-                FOOTER
+                Ersteller: Florence Meier, Pascal Bamert, Nick Dubuis, Niklas Kaesler ----------
+                Erstelldatum: 06.09.18 ----------
+                Version: Alpha 0.6.34.2931.1
             </footer>
 
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
