added benutzeransich with flippable cards

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
                 <a class="my-0 mr-md-auto font-weight-normal" href="./index.html">
                     <!-- NIKLAS: HIER KOMMT DAS LOGO REIN
-                    SCHÖN ODER!? -->
+                    SCHÖN ODER!? MEGA! -->
                     <img src="logo.jpg" alt="Logo">
                 </a>
                 <nav class="my-2 my-md-0 mr-md-3">
@@ -28,13 +28,96 @@
             
             <div class="container">
                 <!-- BENUTZERANSICHT -->
-                BENUTZERANSICHT
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">0</div>
+                        <div class="flipBack"><strong>0</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">1</div>
+                        <div class="flipBack"><strong>1</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">2</div>
+                        <div class="flipBack"><strong>2</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">3</div>
+                        <div class="flipBack"><strong>3</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">5</div>
+                        <div class="flipBack"><strong>5</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">8</div>
+                        <div class="flipBack"><strong>8</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">13</div>
+                        <div class="flipBack"><strong>13</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">21</div>
+                        <div class="flipBack"><strong>21</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">34</div>
+                        <div class="flipBack"><strong>34</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">55</div>
+                        <div class="flipBack"><strong>55</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">89</div>
+                        <div class="flipBack"><strong>89</strong></div>
+                    </div>
+                </label>
+                <label class="flipContainer">
+                    <input id="flip" type="checkbox"/>
+                    <div class="flip">
+                        <div class="flipFront">144</div>
+                        <div class="flipBack"><strong>144</strong></div>
+                    </div>
+                </label>
             </div>
 
             <footer class="footer">
-                Ersteller: Florence Meier, Pascal Bamert, Nick Dubuis, Niklas Kaesler ----------
-                Erstelldatum: 06.09.18 ----------
-                Version: Alpha 0.6.34.2931.1
+                &copy Ersteller: Florence Meier, Pascal Bamert, Nick Dubuis, Niklas Kaesler |
+                Erstelldatum: 07.09.18 |
+                Version: Alpha 0.1
             </footer>
 
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
