--- a/index.html
+++ b/index.html
@@ -28,90 +28,97 @@
             
             <div class="container">
                 <!-- BENUTZERANSICHT -->
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">0</div>
-                        <div class="flipBack"><strong>0</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">1</div>
-                        <div class="flipBack"><strong>1</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">2</div>
-                        <div class="flipBack"><strong>2</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">3</div>
-                        <div class="flipBack"><strong>3</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">5</div>
-                        <div class="flipBack"><strong>5</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">8</div>
-                        <div class="flipBack"><strong>8</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">13</div>
-                        <div class="flipBack"><strong>13</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">21</div>
-                        <div class="flipBack"><strong>21</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">34</div>
-                        <div class="flipBack"><strong>34</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">55</div>
-                        <div class="flipBack"><strong>55</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">89</div>
-                        <div class="flipBack"><strong>89</strong></div>
-                    </div>
-                </label>
-                <label class="flipContainer">
-                    <input id="flip" type="checkbox"/>
-                    <div class="flip">
-                        <div class="flipFront">144</div>
-                        <div class="flipBack"><strong>144</strong></div>
-                    </div>
-                </label>
+                <div id="cardWrapper">
+                    <p>Story Points (bitte wählen):</p>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="0" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">0</div>
+                            <div class="flipBack"><strong>0</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="1" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">1</div>
+                            <div class="flipBack"><strong>1</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="2" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">2</div>
+                            <div class="flipBack"><strong>2</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="3" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">3</div>
+                            <div class="flipBack"><strong>3</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="5" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">5</div>
+                            <div class="flipBack"><strong>5</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="8" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">8</div>
+                            <div class="flipBack"><strong>8</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="13" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">13</div>
+                            <div class="flipBack"><strong>13</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="21" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">21</div>
+                            <div class="flipBack"><strong>21</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="34" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">34</div>
+                            <div class="flipBack"><strong>34</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="55" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">55</div>
+                            <div class="flipBack"><strong>55</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="89" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">89</div>
+                            <div class="flipBack"><strong>89</strong></div>
+                        </div>
+                    </label>
+                    <label class="flipContainer">
+                        <input id="flip" type="checkbox" value="144" name="flipCard"/>
+                        <div class="flip">
+                            <div class="flipFront">144</div>
+                            <div class="flipBack"><strong>144</strong></div>
+                        </div>
+                    </label>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-success" onclick="ausWahlBestaetigen()">Bestätigen</button>
+                </div>
+                <label id="ausWahlAnzeigen"></label>            
             </div>
 
             <footer class="footer">
@@ -123,5 +130,6 @@
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+            <script src="functions.js"></script>
         </body>
 </html>
