add Scrum Master Ansicht

--- a/scrumMasterAnsicht.html
+++ b/scrumMasterAnsicht.html
@@ -25,8 +25,47 @@
             </div>
             
             <div class="container">
-                <!-- SCRUMMASTERANSICHT -->
-                SCRUMMASTERANSICHT: NICK
+                <p>Teammitglieder und Story Point erfassen:</p>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="teammitglied">
+                        <input name="Story Point" placeholder="Story Point" class="storyPointInput">
+                        <input name="Name" placeholder="Name des Teammitglieds" class="nameInput">
+                </div>
+                <div class="totalStoryPoints">
+                        <label class="storyPointInput">123</label>
+                        <label class="nameInput">Total Story Points</label>
+                </div>
             </div>
 
             <footer class="footer">
