--- a/scrumMasterAnsicht.html
+++ b/scrumMasterAnsicht.html
@@ -66,6 +66,7 @@
                         <label class="storyPointInput">123</label>
                         <label class="nameInput">Total Story Points</label>
                 </div>
+                <button type="button" class="btn btn-primary" onclick="resetPoints()">Reset Points</button>
             </div>
 
             <footer class="footer">
@@ -77,5 +78,6 @@
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+            <script src="functions.js"></script>
         </body>
 </html>
