--- a/scrumMasterAnsicht.html
+++ b/scrumMasterAnsicht.html
@@ -24,7 +24,7 @@
                 </nav>
             </div>
             
-            <div class="container">
+            <div class="container" id="storyPoints">
                 <p>Teammitglieder und Story Point erfassen:</p>
                 <div class="teammitglied">
                         <input name="Story Point" onchange="updatevalue()" placeholder="Story Point" class="storyPointInput">
@@ -71,6 +71,8 @@
                         <label class="nameInput">Durchschnitt(auf nächste Fibonaccizahl gerundet)</label>
                 </div>
                 <button type="button" class="btn btn-primary" onclick="resetPoints()">Reset Points</button>
+                <button type="button" class="btn btn-secondary" onclick="toggleExport()">Zusammenfassung</button>
+                <button type="button" class="btn btn-secondary" id="exportButton" hidden onclick="exportAlsPdf('Zusammenfassung:')">export als PDF</button>
             </div>
 
             <footer class="footer">
@@ -82,6 +84,7 @@
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+            <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
             <script src="functions.js"></script>
         </body>
 </html>
