CSV file export works

--- a/scrumMasterAnsicht.html
+++ b/scrumMasterAnsicht.html
@@ -73,6 +73,7 @@
                 <button type="button" class="btn btn-primary" onclick="resetPoints()">Reset Points</button>
                 <button type="button" class="btn btn-secondary" onclick="erstelleZuFas()">Zusammenfassung</button>
                 <button type="button" class="btn btn-secondary" id="exportButton" hidden onclick="exportAlsPdf('Zusammenfassung:')">export als PDF</button>
+                <button type="button" class="btn btn-secondary" id="exportCSVButton" hidden onclick="exportAlsCSV()">Export als CSV</button>
             </div>
             <div id="tableContainer" hidden>
                 <!-- HIER LEBT DIE ZUSAMMENFASSUNGSTABELLE; NICHTS REINSCHREIBEN! -->
