--- a/scrumMasterAnsicht.html
+++ b/scrumMasterAnsicht.html
@@ -77,7 +77,7 @@
                 <button type="button" class="btn btn-secondary" id="exportButton" hidden onclick="exportAlsPdf('Zusammenfassung:')">export als PDF</button>
                 <button type="button" class="btn btn-secondary" id="exportCSVButton" hidden onclick="exportAlsCSV()">Export als CSV</button>
                 <button type="button" class="btn btn-secondary" id="exportTxtButton" hidden onclick="exportAlsTxt()">Export als TXT</button>
-                <!-- <button type="button" class="btn btn-secondary" id="exportCSVButton" hidden onclick="exportAlsXls()">Export als XLS</button> -->
+                <button type="button" class="btn btn-secondary" id="exportXlsButton" hidden onclick="exportAlsXls()">Export als XLS</button>
             </div>
             <div id="tableContainer" hidden>
                 <!-- HIER LEBT DIE ZUSAMMENFASSUNGSTABELLE; NICHTS REINSCHREIBEN! -->
