added comments to functions, styles and tests

--- a/tests.html
+++ b/tests.html
@@ -34,10 +34,10 @@
 
     <h1>Unit Test Resultate</h1>
 
-    <!-- UNIT TEST RESULTATE -->
+    <!-- UNIT TEST RESULTS -->
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
-    <!-- UNIT TEST RESULTATE ENDE -->
+    <!-- END UNIT TEST RESULTS -->
 
     <!-- FOOTER -->
     <footer class="footer">
