Added documentation and comments

--- a/tests.html
+++ b/tests.html
@@ -1,3 +1,8 @@
+<!-- 
+Author: Florence Meier
+Version: 1.2
+Last Updated: 09.11.2018
+ -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -42,7 +47,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       &copy Ersteller: Florence Meier, Pascal Bamert, Nick Dubuis, Niklas
-      Kaesler | Erstelldatum: 02.11.18 | Version: Alpha 0.4
+      Kaesler | Erstelldatum: 03.12.18 | Version: 2.5
     </footer>
     <!-- END FOOTER -->
 
